# Django_Quotes

./: .dockerignore  .env.example  =0.11  Dockerfile  README.md  Readme.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
quotes/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
quotes/migrations/: 0001_initial.py
quotes/static/quotes/: styles.css
quotes/templates/quotes/: add.html  base.html  dashboard.html  index.html  top.html
scripts/: entrypoint.sh
